Add Mountain Fresh, scale some logos more

--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -137,7 +137,7 @@
                 <tr>
                   <td>
                     <a href="https://meadowlarklander.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid" width=80%>
+                      <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid" width=60%>
                     </a>
                   </td>
                   <td>
@@ -147,7 +147,7 @@
                 <tr>
                   <td>
                     <a href="https://www.lincolnstreetbakery.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/LincolnstreetBakery-01.png" class="img-fluid" width=80%>
+                      <img src="static/img/LincolnstreetBakery-01.png" class="img-fluid" width=60%>
                     </a>
                   </td>
                   <td>
@@ -167,7 +167,7 @@
                 <tr>
                   <td>
                     <a href="https://fremontlocalmarket.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/FremontLocalMarketLogo_updated.jpg" class="img-fluid" width=75%>
+                      <img src="static/img/FremontLocalMarketLogo_updated.jpg" class="img-fluid" width=50%>
                     </a>
                   </td>
                   <td>
@@ -177,7 +177,7 @@
                 <tr>
                   <td>
                     <a href="https://www.chalkncheesewy.com/" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/g30.avif" class="img-fluid" width=40%>
+                      <img src="static/img/g30.avif" class="img-fluid" width=30%>
                     </a>
                   </td>
                   <td>
@@ -187,7 +187,7 @@
                 <tr>
                   <td>
                     <a href="https://www.laramiecoop.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/BigHollow.svg" class="img-fluid" width=80%>
+                      <img src="static/img/BigHollow.svg" class="img-fluid" width=70%>
                     </a>
                   </td>
                   <td>
@@ -197,7 +197,7 @@
                 <tr>
                   <td>
                     <a href="https://www.hbcafeandjuicery.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/HB.jpg" class="img-fluid" width=25%>
+                      <img src="static/img/HB.jpg" class="img-fluid" width=20%>
                     </a>
                   </td>
                   <td>
@@ -207,11 +207,21 @@
                 <tr>
                   <td>
                     <a href="https://www.operahousestore.com/" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/OperaHouse.webp" class="img-fluid" width=40%>
+                      <img src="static/img/OperaHouse.webp" class="img-fluid" width=30%>
                     </a>
                   </td>
                   <td>
                     801 S Main St, Kemmerer, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.mountain-fresh-produce.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/MountainFresh.webp" class="img-fluid" width=20%>
+                    </a>
+                  </td>
+                  <td>
+                    461 S Pine St, Pinedale, WY
                   </td>
                 </tr>
                 <tr>
@@ -237,7 +247,7 @@
                 <tr>
                   <td>
                     <a href="https://thecupboard.net" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/new-cupboard-logo.png" class="img-fluid" width=70%>
+                      <img src="static/img/new-cupboard-logo.png" class="img-fluid" width=40%>
                     </a>
                   </td>
                   <td>
@@ -256,7 +266,7 @@
                 <tr>
                   <td>
                     <a href="https://windriveroutpost.com/collections/home-decor/products/queens-of-goodness-honey" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/wind-river-outpost.png" class="img-fluid">
+                      <img src="static/img/wind-river-outpost.png" class="img-fluid" width=60%>
                     </a>
                   </td>
                   <td>
@@ -266,7 +276,7 @@
                 <tr>
                   <td>
                     <a href="https://www.copocoshoney.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/Copocos.jpg" class="img-fluid" width=60%>
+                      <img src="static/img/Copocos.jpg" class="img-fluid" width=30%>
                     </a>
                   </td>
                   <td>
