Update case and jar weight

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -168,8 +168,8 @@
             <p>Licensed and insured facility</p>
             <ul>
               <li>Net wt 5.5 oz (156g)</li>
-              <li>Jar wt 9.5oz (270g)</li>
-              <li>Box wt 15 lbs (6.8kg)</li>
+              <li>Jar wt 10.1 oz (287g)</li>
+              <li>Box wt 15.7 lbs (7.13kg)</li>
               <li>Jar dimensions: 2.75 x 2.375"</li>
               <li>Box dimensions: 3 x 15 x 10.25"</li>
             </ul>
@@ -187,8 +187,8 @@
         <div class="card bl-card">
           <div class="card-header text-center">Storage Information</div>
           <div class="card-body">
-            <p>Store at room temperature, 65-80&deg;F for best consistency</p>
-            <p>Prolonged exposure to temperatures over 95&deg;F may result in
+            <p>Store at room temperature, 68-78&deg;F (20-25&deg;C) for best consistency</p>
+            <p>Prolonged exposure to temperatures over 95&deg;F (35&deg;C) may result in
               the product becoming more liquid but it remains safe and delicious</p>
             <p>Shelf life is up to 4 years from production date</p>
           </div>
