Update about and story text, add faq link

--- a/queensofgoodness/about.html
+++ b/queensofgoodness/about.html
@@ -132,8 +132,11 @@
       <div class="row g-3">
         <div class="card bl-card">
           <div class="card-body">
-            <h5>Queens of Goodness began with a love for bees, a passion for science,
-              and a dedication to creating products that nourish the body and support the environment.</h5>
+            <h5>We craft small-batch creamed raw Wyoming honey, blending it with whole freeze-dried
+              fruits and premium spices. Sourced from local beekeepers, our honey undergoes a
+              week-long transformation into a luxuriously smooth, spreadable treat made with the
+              finest ingredients—organic, single-origin, and fair trade whenever possible.
+            </h5>
           </div>
         </div>
       </div>
@@ -176,11 +179,19 @@
             <img class="card-img-top" src="static/img/HoneyBeeDay24.jpeg">
             <div class="card-body">
               <h5 class="card-title text-center">Beekeeping</h5>
-              <p class="card-text">After retiring from a career as a NASA researcher, I turned my
-                focus to beekeeping, where I saw firsthand the incredible impact that healthy bees
-                have on our ecosystems. From that experience, I knew I wanted to create something
-                special—something that not only celebrates the beauty and importance of honey bees
-                but also shares their benefits with others. -- Susan</p>
+              <p class="card-text">I got my first beehive in 2018 and in spite of all the rookie
+                mistakes, had a successful first year and I was hooked. Subsequent years presented
+                many learning experiences, which with help from mentors and the internet I was
+                somehow able to keep my bees thriving and expanding. Just being a successful hobbyist
+                with 5 hives is a lot of work and from the side-liner and commercial beekeepers I
+                met I knew that was not the path for me. After retiring from a career as a NASA
+                researcher, I needed to keep busy and decided to create business centered around bees
+                and health. Healthy bees and other pollinators in our ecosystems, and healthy products
+                for our customers and community. Our premium creamed raw honey products reflect our
+                values and the vision to create something special for anyone to enjoy, knowing that
+                we've preserved all the goodness from the bees and enhanced by creaming along with a
+                few carefully chosen natural ingredients.
+                -- Susan</p>
             </div>
           </div>
         </div>
@@ -248,6 +259,11 @@
               <p>2881 Sinks Canyon Rd<br>
                 Lander, WY 82520</p>
             </div>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+            </div>
           </div>
           <div class="col-4">
             <ul class="list-unstyled">
@@ -256,12 +272,8 @@
               <li class="footer-item"><a href="events.html" class="footer-link"><p>Events</p></a></li>
               <li class="footer-item"><a href="shop.html" class="footer-link"><p>Shop</p></a></li>
               <li class="footer-item"><a href="about.html" class="footer-link-active"><p>About</p></a></li>
+              <li class="footer-item"><a href="faq.html" class="footer-link-active"><p>FAQ</p></a></li>
             </ul>
-            <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
-            </div>
           </div>
         </div>
       </div>
@@ -281,6 +293,9 @@
           </div>
           <div class="col">
             <a href="about.html" class="footer-link-active">About</a>
+          </div>
+          <div class="col">
+            <a href="faq.html" class="footer-link-active">FAQ</a>
           </div>
         </div>
         <div class="row">
