--- a/queensofgoodness/events.html
+++ b/queensofgoodness/events.html
@@ -195,6 +195,11 @@
               <p>2881 Sinks Canyon Rd<br>
                 Lander, WY 82520</p>
             </div>
+            <div class="social-links">
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+            </div>
           </div>
           <div class="col-4">
             <ul class="list-unstyled">
@@ -203,12 +208,8 @@
               <li class="footer-item"><a href="events.html" class="footer-link-active"><p>Events</p></a></li>
               <li class="footer-item"><a href="shop.html" class="footer-link"><p>Shop</p></a></li>
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
+              <li class="footer-item"><a href="faq.html" class="footer-link-active"><p>FAQ</p></a></li>
             </ul>
-            <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
-            </div>
           </div>
         </div>
       </div>
@@ -228,6 +229,9 @@
           </div>
           <div class="col">
             <a href="about.html" class="footer-link">About</a>
+          </div>
+          <div class="col">
+            <a href="faq.html" class="footer-link-active">FAQ</a>
           </div>
         </div>
         <div class="row">
