Update vendor brochure

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -18,15 +18,15 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://queensofgoodness.com/index.html">
     <meta property="og:site_name" content="Queens of Goodness">
-    <meta property="og:description" content="Premium creamed raw honey with fair trade-spices and whole freeze-dried fruits">
+    <meta property="og:description" content="Premium creamed raw honey with gourmet spices and whole freeze-dried fruits">
     <meta property="og:image" content="static/img/logo.svg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Queens of Goodness">
-    <meta property="twitter:description" content="Premium creamed raw honey with fair-trade spices and whole freeze-dried fruits">
+    <meta property="twitter:description" content="Premium creamed raw honey with gourmet spices and whole freeze-dried fruits">
     <meta property="twitter:site" content="@queensofgoodness">
     <meta property="twitter:image" content="static/img/logo.svg">
-    <meta name="description" content="Premium creamed raw honey with fair-trade spices and whole freeze-dried fruits">
+    <meta name="description" content="Premium creamed raw honey with gourmet spices and whole freeze-dried fruits">
     <meta name="author" content="Susan Frost">
     <meta name="robots" content="noindex, nofollow">
     <meta name="googlebot" content="noindex, nofollow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -66,11 +66,10 @@
           <div class="card-body">
             <p class="card-text">
               Raw unfiltered Wyoming honey is sourced directly from trusted local beekeepers
-              and enriched with premium and fair-trade spices and nutrient-rich freeze-dried fruits.
-              Each batch is hand-crafted using a
-              proprietary week-long crystallization and blending process that yields
-              a velvety-smooth, spreadable product with distinctive flavors and all
-              the goodness of raw local honey.
+              and enriched with gourmet spices and nutrient-rich freeze-dried fruits.
+              Each batch is hand-crafted using a proprietary week-long controlled crystallization
+              and blending process for a rich, velvety-smooth, spreadable product with bold
+              natural flavors and real nutrition.</li>
             </p>
           </div>
         </div>
@@ -79,24 +78,26 @@
         <div>
           <div class="image-container">
             <div class="overlay-text-ct">
-              <h4>Golden Latte</h4>
+              <h4>Golden Milk</h4>
             </div>
-            <img src="static/img/Golden%20Milk.jpg" class="img-fluid img-center">
+            <img src="static/img/GoldenLatte.png" class="img-fluid img-center">
           </div>
         </div>
         <br>
         <div class="card bl-card">
-          <div class="card-header text-center">Serving Ideas</div>
+          <div class="card-header text-center">Serving Suggestions</div>
           <div class="card-body">
+            <p class="card-text">Drink Ideas</p>
             <ul>
-              <li>Stir into hot drinks</li>
-              <li>Craft golden milk latte</li>
-              <li>Spread on toast or bagels</li>
-              <li>Make a soothing tonic</li>
-              <li>Pair with cheese or apples</li>
-              <li>Enhance your oatmeal</li>
-              <li>Great for simple icing</li>
-              <li>Enjoy by the spoonful</li>
+              <li><b>Golden Milk</b> - simply swirl a teaspoon or two into your favorite warm milk</li>
+              <li>stir in a spoonful to coffee, tea or hot water</li>
+              <li>Make a simple syrup for mocktails and cocktails</li>
+            </ul>
+            <p>Food Ideas</p>
+            <ul>
+              <li>Savor a spoonful or use as a delicious icing</li>
+              <li>Spread on biscuits, bagels, scones, toast or waffles</li>
+              <li>Pair with apples, cheese, pretzels, yogurt or oatmeal</li>
             </ul>
           </div>
         </div>
@@ -109,7 +110,7 @@
         <div class="card bl-card">
           <div class="card-header text-center">Indulge in Nature's Best</div>
           <div class="card-body">
-            <p>Clean Label - Raw unfiltered local honey, fair-trade spices and whole freeze-dried fruits</p>
+            <p>Raw unfiltered local honey, gourmet spices and whole freeze-dried fruits</p>
             <ul>
               <li>Turmeric Ginger</li>
               <li>Elderberry</li>
@@ -133,12 +134,50 @@
               <b>MSRP</b> (Speciality): $14.99 - $16.99<br>
               <b>Wholesale</b>: Case of 24 jars ($200)<br>
               <b>Wholesale</b>: Partial case ($8.50 / jar)<br>
+              <b>Barista</b>: 21 oz ($20, 50-60 servings)<br>
+              <b>Barista</b>: 88 oz ($65, 210-250 servings)<br>
               <b>Delivery</b>: Contact us<br>
               <ul>
-                <li>Top Sellers - Turmeric Ginger, Elderberry, Blueberry Lemon</li>
+                <li>Top Sellers - Turmeric Ginger, Elderberry</li>
                 <li>Tailor-Made Cases - get exactly what you want</li>
               </ul>
             </p>
+          </div>
+        </div>
+      </div>
+      <div class="panel">
+        <div class="card bl-card">
+          <div class="card-header text-center">Product Information</div>
+          <div class="card-body">
+            <p>Glass jars, professional labels with UPCs</p>
+            <p>Licensed and insured facility</p>
+            <ul>
+              <li>Net wt 5.5 oz (156g)</li>
+              <li>Jar wt 10.1 oz (287g)</li>
+              <li>Box wt 15.7 lbs (7.13kg)</li>
+              <li>Jar dimensions: 2.75 x 2.375"</li>
+              <li>Box dimensions: 3 x 15 x 10.25"</li>
+            </ul>
+          </div>
+        </div>
+        <br>
+        <div class="card tg-card">
+          <div class="card-header text-center">Honey Information</div>
+          <div class="card-body">
+            <p>Pure Wyoming honey from local hives</p>
+            <p>From the hive to the jar the honey is never heated</p>
+            <p>The honey is never filtered, only coarsely strained to remove the larger pieces of wax</p>
+          </div>
+        </div>
+        <br>
+        <div class="card bl-card">
+          <div class="card-header text-center">Storage Information</div>
+          <div class="card-body">
+            <p>Store at room temperature, 68-78&deg;F (20-25&deg;C) for best consistency</p>
+            <p>Prolonged exposure to temperatures over 95&deg;F (35&deg;C) may result in
+              the product becoming more liquid but it remains safe and delicious</p>
+            <p>Shelf life is up to 4 years from production date</p>
+            <p>Warm gently and stir to soften</p>
           </div>
         </div>
       </div>
@@ -157,40 +196,6 @@
               empower our customers to make healthier, more informed choices. We believe in the
               power of food to nourish not just the body, but the soul, and our products
               reflect that belief in every jar.</p>
-          </div>
-        </div>
-      </div>
-      <div class="panel">
-        <div class="card bl-card">
-          <div class="card-header text-center">Product Information</div>
-          <div class="card-body">
-            <p>Eye-catching packaging with UPCs</p>
-            <p>Licensed and insured facility</p>
-            <ul>
-              <li>Net wt 5.5 oz (156g)</li>
-              <li>Jar wt 10.1 oz (287g)</li>
-              <li>Box wt 15.7 lbs (7.13kg)</li>
-              <li>Jar dimensions: 2.75 x 2.375"</li>
-              <li>Box dimensions: 3 x 15 x 10.25"</li>
-            </ul>
-          </div>
-        </div>
-        <br>
-        <div class="card tg-card">
-          <div class="card-header text-center">Honey Information</div>
-          <div class="card-body">
-            <p>From the hive to the jar the honey is never heated</p>
-            <p>The honey is never filtered, only coarsely strained to remove the larger pieces of wax</p>
-          </div>
-        </div>
-        <br>
-        <div class="card bl-card">
-          <div class="card-header text-center">Storage Information</div>
-          <div class="card-body">
-            <p>Store at room temperature, 68-78&deg;F (20-25&deg;C) for best consistency</p>
-            <p>Prolonged exposure to temperatures over 95&deg;F (35&deg;C) may result in
-              the product becoming more liquid but it remains safe and delicious</p>
-            <p>Shelf life is up to 4 years from production date</p>
           </div>
         </div>
       </div>
