--- a/queensofgoodness/faq.html
+++ b/queensofgoodness/faq.html
@@ -148,10 +148,10 @@
               </h2>
               <div id="gold" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
-                  Simply scoop 1 tsp (more or less depending on your tastes) of our Turmeric Ginger
-                  and gently swirl into a warm cup of your favorite milk until dissolved, then
-                  enjoy it. Pour it over ice for a refreshing summer drink or add a shot of espresso
-                  or coffee to your golden latte.
+                  Simply scoop a teaspoon or two (more or less depending on your tastes) of our
+                  Turmeric Ginger and gently swirl into a warm cup of your favorite milk until dissolved.
+                  Pour it over ice for a refreshing summer drink or add a shot of espresso
+                  or coffee to make a golden latte.
                 </div>
               </div>
             </div>
@@ -165,11 +165,10 @@
                 <div class="accordion-body">
                   While there is no official U.S. federal definition of raw honey, the National Honey
                   Board defines raw honey as “honey as it exists in the beehive or as obtained by
-                  extraction, settling or straining without adding heat”. Our raw honey has not been
-                  filtered or heated at any time from the hive to the jar.
-                  <p>Raw honey often appears to be cloudy due to the pollen, wax, and other particles
+                  extraction, settling or straining without adding heat”. Our raw honey is never
+                  heated or filtered at any time from the hive to the jar.
+                  <br>Raw honey may appear to be cloudy due to the pollen, wax, and other particles
                     in suspension, and it almost always crystallizes within a year.
-                  </p>
                 </div>
               </div>
             </div>
