Add cafe intro, X, golden milk picture

--- a/queensofgoodness/cafe_intro.html
+++ b/queensofgoodness/cafe_intro.html
@@ -90,34 +90,33 @@
                 <td class="content" colspan="2">
                   <p>Hi There</p>
                   <p>
-                    I'm following up on my recent message about <b>Queens of Goodness</b>
-                    — we craft premium creamed raw honey products using locally sourced
-                    raw unfiltered honey from trusted beekeepers, blended with whole
-                    freeze-dried fruits and fair-trade spices. Our products are eye-catching,
-                    giftable, and have been a hit at specialty shops, wellness clinics,
-                    and farmers markets.
+                    We are now offering <b>Queens of Goodness</b> premium creamed raw honey blends in bulk to
+                    coffee shops and cafes. Our <b>Turmeric Ginger</b> blend is the perfect base for golden
+                    milk lattes, which are a hit at <b>Broadway Bakery</b> in Thermopolis. The <b>Cinnamon
+                      Spice</b> blend adds warmth and flavor to coffee and chai lattes being enjoyed at
+                    <b>Saratoga Sandwich Company</b> in Saratoga. And our <b>Elderberry</b> blend is a
+                    favorite for tea, especially for its immune-supporting benefits.
                   </p>
                   <p>
-                    Popular blends like Turmeric Ginger and Elderberry are especially loved for their
-                    flavor and wellness benefits. We are fully licensed by the Wyoming Department of
-                    Health and carry commercial insurance. To learn more about our products and company
-                    visit queensofgoodness.com.
+                    Our premium creamed raw honey products are crafted using locally sourced raw and unfiltered
+                    Wyoming honey, hand-selected gourmet spices and nutrient-rich freeze-dried fruits.
                   </p>
                   <p>
-                    I’d love to connect and explore how we can work together. We offer:
+                    Popular blends like Turmeric Ginger and Elderberry are especially loved for their flavor
+                    and wellness benefits. We are fully licensed by the Wyoming Department of Health and carry
+                    commercial insurance. For wholesale details view our
+                    <a href="https://queensofgoodness.com/brochure.html"><b>Retailer Brochure</b></a>. To learn more
+                    about our products and company visit <a href="https://queensofgoodness.com"><b>queensofgoodness.com</b></a>
+                  </p>
+                  <p>
+                    We are offering our barista blends for:
                   </p>
                   <ul>
-                    <li>Competitive wholesale pricing</li>
-                    <li>Low minimum orders</li>
-                    <li>Beautiful shelf-ready packaging</li>
-                    <li>Samples and demos</li>
+                    <li>$20 for a 21 oz jar (50 - 60 servings)</li>
+                    <li>$65 for an 88 oz container (210 - 250 servings)</li>
                   </ul>
                   <p>
-                    Do you have 10 minutes this week to meet? I would love to drop off a sample of
-                    golden milk made with our Turmeric Ginger blend.
-                  </p>
-                  <p>
-                    Looking forward to helping you bring something sweet and unique to your customers!
+                    I would love to have you sample our products. Is there a time that would be convenient to meet?
                   </p>
                 </td>
               </tr>
