--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -187,11 +187,21 @@
                 <tr>
                   <td>
                     <a href="https://www.laramiecoop.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/BigHollow.svg" class="img-fluid" width=70%>
+                      <img src="static/img/BigHollow.svg" class="img-fluid" width=50%>
                     </a>
                   </td>
                   <td>
                     112 S 2nd St, Laramie, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://matt-egging.wixsite.com/manchesterstcoffee" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/ManChesterSheridanFNTLS.avif" class="img-fluid" width=40%>
+                    </a>
+                  </td>
+                  <td>
+                    409 E 1st St suite T, Sheridan, WY
                   </td>
                 </tr>
                 <tr>
@@ -201,7 +211,7 @@
                     </a>
                   </td>
                   <td>
-                    165 E Broadway Jackson Hole, WY
+                    165 E Broadway, Jackson Hole, WY
                   </td>
                 </tr>
                 <tr>
@@ -261,7 +271,7 @@
                     </a>
                   </td>
                   <td>
-                    152 S College Ave. Fort Collins, CO
+                    152 S College Ave, Fort Collins, CO
                   </td>
                 </tr>
               </table>
@@ -290,7 +300,7 @@
                     </a>
                   </td>
                   <td>
-                    2020 N College Ave. Fort Collins, CO
+                    2020 N College Ave, Fort Collins, CO
                   </td>
                 </tr>
               </table>
