--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -206,6 +206,16 @@
                 </tr>
                 <tr>
                   <td>
+                    <a href="https://www.sackettsmarket.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/SackettsMarket_FullLogo_FullColor_Original_WEB.gif" class="img-fluid" width=30%>
+                    </a>
+                  </td>
+                  <td>
+                    184 E Burkitt St, Sheridan, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
                     <a href="https://www.hbcafeandjuicery.com" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/HB.jpg" class="img-fluid" width=20%>
                     </a>
