--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -90,7 +90,7 @@
             <p class="card-text">Drink Ideas</p>
             <ul>
               <li><b>Golden Milk</b> - simply swirl a teaspoon or two into your favorite warm milk</li>
-              <li>stir in a spoonful to coffee, tea or hot water</li>
+              <li>Stir in a spoonful to coffee, tea or hot water</li>
               <li>Make a simple syrup for mocktails and cocktails</li>
             </ul>
             <p>Food Ideas</p>
@@ -127,7 +127,7 @@
         </div>
         <br>
         <div class="card bl-card">
-          <div class="card-header text-center">Wholesale Order Information</div>
+          <div class="card-header text-center">Wholesale Orders</div>
           <div class="card-body">
             <p class="card-text">
               <b>MSRP</b> (Grocery): $13.99 - $14.99<br>
@@ -161,15 +161,6 @@
           </div>
         </div>
         <br>
-        <div class="card tg-card">
-          <div class="card-header text-center">Honey Information</div>
-          <div class="card-body">
-            <p>Pure Wyoming honey from local hives</p>
-            <p>From the hive to the jar the honey is never heated</p>
-            <p>The honey is never filtered, only coarsely strained to remove the larger pieces of wax</p>
-          </div>
-        </div>
-        <br>
         <div class="card bl-card">
           <div class="card-header text-center">Storage Information</div>
           <div class="card-body">
@@ -196,6 +187,17 @@
               empower our customers to make healthier, more informed choices. We believe in the
               power of food to nourish not just the body, but the soul, and our products
               reflect that belief in every jar.</p>
+          </div>
+        </div>
+        <br>
+        <div class="card tg-card">
+          <div class="card-header text-center">Honey Information</div>
+          <div class="card-body">
+            <p>Raw Wyoming honey from local hives</p>
+            <p>From the hive to the jar the honey is never filtered or heated</p>
+          </div>
+          <div class="card-footer text-center">
+            <a class="learn-more" href="honey.html">Learn More</a>
           </div>
         </div>
       </div>
