--- a/queensofgoodness/honey.html
+++ b/queensofgoodness/honey.html
@@ -238,9 +238,10 @@
                 and many people prefer it over runny honey.
               </p>
               <p class="card-text">
-                Gently warming the crystallized raw honey while keeping the temperature below 104
-                &deg;F (40 &deg;C) will return it to a liquid. Overheating may permanently alter
-                the texture and destroy most benefits of raw honey.
+                Gently warming the crystallized raw honey while keeping the temperature no more than 104
+                &deg;F (40 &deg;C) will safely return it to a liquid. Overheating may permanently alter
+                the texture and destroy most benefits of raw honey. Heating honey above 118&deg;F
+                (48&deg;C) generally means that it can no longer be called raw.
               </p>
             </div>
           </div>
