--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -148,7 +148,7 @@
         <div class="col-md-6 col-lg-8">
           <div class="card tg-card h-100">
             <div class="card-body">
-              <img class="card-img-top" src="static/img/Display.jpg" alt="Product stack">
+              <img class="card-img-top" src="static/img/ProductStack.avif" alt="Product stack">
             </div>
             <div class="card-footer text-center">
               <a class="learn-more" href="products.html">Learn More</a>
@@ -172,10 +172,10 @@
       </div>
       <div class="row row-cols-2 g-3">
         <div class="col">
-          <img src="static/img/Toast.jpeg" class="img-fluid img-center">
+          <img src="static/img/GoldenLatte.avif" class="img-fluid img-center">
         </div>
         <div class="col">
-          <img src="static/img/BlueberryTea.jpeg" class="img-fluid img-center h-100">
+          <img src="static/img/Oatmeal.avif" class="img-fluid img-center h-100">
         </div>
       </div>
 
@@ -224,7 +224,7 @@
           <div class="card tg-card img-hover">
             <a href="products.html#TG" class="text-decoration-none">
               <div class="card-header-sm card-link text-center">Turmeric Ginger</div>
-              <img class="card-img-top" src="static/img/TG.jpg" alt="Golden Milk">
+              <img class="card-img-top" src="static/img/TG.avif" alt="Golden Milk">
             </a>
           </div>
         </div>
@@ -232,7 +232,7 @@
           <a href="products.html#E" class="text-decoration-none">
             <div class="card e-card img-hover">
               <div class="card-header-sm card-link text-center">Elderberry</div>
-              <img class="card-img-top" src="static/img/E.jpg" alt="Elderberry">
+              <img class="card-img-top" src="static/img/E.avif" alt="Elderberry">
             </div>
           </a>
         </div>
@@ -240,15 +240,15 @@
           <a href="products.html#G" class="text-decoration-none">
             <div class="card g-card img-hover">
               <div class="card-header-sm card-link text-center">Ginger</div>
-              <img class="card-img-top" src="static/img/G.jpg" alt="Ginger">
+              <img class="card-img-top" src="static/img/G.avif" alt="Ginger">
             </div>
           </a>
         </div>
         <div class="col">
           <a href="products.html#PS" class="text-decoration-none">
             <div class="card ps-card img-hover">
-              <div class="card-header-sm card-link text-center">Pumpkin Spice</div>
-              <img class="card-img-top" src="static/img/PS.jpg" alt="Pumpkin Spice">
+              <div class="card-header-sm card-link text-center">Cinnamon Spice</div>
+              <img class="card-img-top" src="static/img/CS.avif" alt="Pumpkin Spice">
             </div>
           </a>
         </div>
@@ -256,7 +256,7 @@
           <a href="products.html#BL" class="text-decoration-none">
             <div class="card b-card img-hover">
               <div class="card-header-sm card-link text-center">Blueberry Lemon</div>
-              <img class="card-img-top" src="static/img/BL.jpg" alt="Blueberry Lemon">
+              <img class="card-img-top" src="static/img/BL.avif" alt="Blueberry Lemon">
             </div>
           </a>
         </div>
@@ -264,7 +264,7 @@
           <a href="products.html#L" class="text-decoration-none">
             <div class="card l-card img-hover">
               <div class="card-header-sm card-link text-center">Lemon</div>
-              <img class="card-img-top" src="static/img/L.jpg" alt="Lemon">
+              <img class="card-img-top" src="static/img/L.avif" alt="Lemon">
             </div>
           </a>
         </div>
