--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -123,7 +123,7 @@
     <div class="container-xl" id="hero">
       <div class="row g-3">
         <div class="image-container">
-          <img src="static/img/Display.jpg" class="img-fluid img-banner">
+          <img src="static/img/ProductStack.avif" class="img-fluid img-banner">
           <div class="overlay-text-ul">
             <h2>Products</h2>
           </div>
@@ -173,7 +173,7 @@
         <div class="col" id="TG">
           <div class="card tg-card h-100">
             <div class="card-header text-center">Turmeric Ginger</div>
-            <img class="card-img-top" src="static/img/Golden%20Milk.jpg" alt="Golden Milk">
+            <img class="card-img-top" src="static/img/GoldenLatte.avif" alt="Golden Milk">
             <div class="card-body">
               <h5 class="card-title text-center">Golden Milk</h5>
               <ul class="card-text">
@@ -186,10 +186,26 @@
             </div>
           </div>
         </div>
+        <div class="col" id="PS">
+          <div class="card ps-card h-100">
+            <div class="card-header text-center">Cinnamon Spice</div>
+            <img class="card-img-top" src="static/img/Bagel.avif" alt="Cinnamon Spice">
+            <div class="card-body">
+              <h5 class="card-title text-center">Cinnamon Spice Bagel</h5>
+              <ul class="card-text">
+                <li>Create a festive hot chai - just stir a spoonful into your favorite hot beverage</li>
+                <li>Spread on bagels, pancakes or waffles</li>
+                <li>Enhance your oatmeal with spice and sweetness</li>
+                <li>Use as a delicious icing or pair with cheese</li>
+              </ul>
+              <p><b>INGREDIENTS:</b> raw honey, cinnamon, turmeric, ginger, nutmeg, allspice, clove, pepper</p>
+            </div>
+          </div>
+        </div>
         <div class="col" id="E">
           <div class="card e-card h-100">
             <div class="card-header text-center">Elderberry</div>
-            <img class="card-img-top" src="static/img/2.jpg" alt="Elderberry">
+            <img class="card-img-top" src="static/img/Oatmeal.avif" alt="Elderberry">
             <div class="card-body">
               <h5 class="card-title text-center">Elderberry Boost</h5>
               <ul class="card-text">
@@ -205,32 +221,16 @@
         <div class="col" id="BL">
           <div class="card b-card h-100">
             <div class="card-header text-center">Blueberry Lemon</div>
-            <img class="card-img-top" src="static/img/BlueberryTea.jpeg" alt="Blueberry Lemon">
+            <img class="card-img-top" src="static/img/Toast.avif" alt="Blueberry Lemon">
             <div class="card-body">
-              <h5 class="card-title text-center">Charcuterie</h5>
+              <h5 class="card-title text-center">Blueberry Spread</h5>
               <ul class="card-text">
-                <li>Pair it with apples or cheese</li>
                 <li>Spread on biscuits, bagels or waffles</li>
+                <li>Pair with apples or cheese for Charcuterie</li>
                 <li>Add a berry boost to your hot drink or oatmeal</li>
                 <li>Enjoy a spoonful or as delicious icing on a treat</li>
               </ul>
               <p><b>INGREDIENTS:</b> raw honey, blueberries, organic lemons</p>
-            </div>
-          </div>
-        </div>
-        <div class="col" id="L">
-          <div class="card l-card h-100">
-            <div class="card-header text-center">Lemon</div>
-            <img class="card-img-top" src="static/img/3.jpg" alt="Lemon">
-            <div class="card-body">
-              <h5 class="card-title text-center">Lemon Tonic</h5>
-              <ul class="card-text">
-                <li>Create a morning tonic - just stir a spoonful into your favorite herbal tea or hot water</li>
-                <li>Spread on biscuits, bagels or toast</li>
-                <li>Add a little zing to glazes or salad dressing</li>
-                <li>Enjoy a spoonful or as delicious icing on a treat</li>
-              </ul>
-              <p><b>INGREDIENTS:</b> raw honey, organic lemons</p>
             </div>
           </div>
         </div>
@@ -241,7 +241,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Ginger Tea</h5>
               <ul class="card-text">
-                <li>Create a ginger tonic - just stir a spoonful into your favorite herbal tea or hot water</li>
+                <li>Stir a dollop into your favorite herbal tea or hot water, maybe add a splash of lemon juice</li>
                 <li>Spread on biscuits, bagels or pair with strong cheese</li>
                 <li>Create flavorful glazes, add to stir-fries or drizzle over roasted vegetables</li>
                 <li>Enjoy a spoonful or add a sweet and spicy kick to your table</li>
@@ -250,19 +250,19 @@
             </div>
           </div>
         </div>
-        <div class="col" id="PS">
-          <div class="card ps-card h-100">
-            <div class="card-header text-center">Pumpkin Spice</div>
-            <img class="card-img-top" src="static/img/Toast.jpeg" alt="Pumpkin Spice">
+        <div class="col" id="L">
+          <div class="card l-card h-100">
+            <div class="card-header text-center">Lemon</div>
+            <img class="card-img-top" src="static/img/3.jpg" alt="Lemon">
             <div class="card-body">
-              <h5 class="card-title text-center">Pumpkin Spice Waffle</h5>
+              <h5 class="card-title text-center">Morning Tonic</h5>
               <ul class="card-text">
-                <li>Create a festive hot chai - just stir a spoonful into your favorite hot beverage</li>
-                <li>Spread on bagels, pancakes or waffles</li>
-                <li>Enhance your oatmeal with spice and sweetness</li>
-                <li>Use as a delicious icing or pair with cheese</li>
+                <li>Create a morning tonic by stirring a dollop into herbal tea or hot water</li>
+                <li>Spread on biscuits, English muffins or toast</li>
+                <li>Add a little zing to glazes or salad dressing</li>
+                <li>Enjoy a spoonful or as delicious icing on a treat</li>
               </ul>
-              <p><b>INGREDIENTS:</b> raw honey, cinnamon, turmeric, ginger, nutmeg, allspice, clove, pepper</p>
+              <p><b>INGREDIENTS:</b> raw honey, organic lemons</p>
             </div>
           </div>
         </div>
